test_src/compiler_errors/parser_errors/ParserError2.b
class ParserError2 {
    void foo() { {
        println(0);
    }
}
